--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{needs.changeset.outputs.backend == "true" ? '14' : '15' }}
-        
+          node-version: ${{ (needs.changeset.outputs.backend == 'true' && '14') || '15' }}
+
   check-bats-version-2:
     runs-on: ubuntu-latest
     steps:
