--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,8 @@ on:
   pull_request:
     types: [opened, labeled, unlabeled, assigned, edited, reopened]
 jobs:
-  checkout-code:
-    runs-on: ubuntu-latest
-    steps:
-      # For pull requests it's not necessary to checkout the code
-      - uses: actions/checkout@v3
   changeset:
     runs-on: ubuntu-latest
-    needs: [checkout-code]
     # Required permissions
     permissions:
       pull-requests: read
@@ -27,7 +21,7 @@ jobs:
       with:
         filters: |
           backend:
-            - './TableScrolling/AppDelegate.'
+            - './TableScrolling/AppDelegate.m'
           frontend:
             - 'frontend/**'
   check-bats-version:
